Migrate to setuptools_scm and add wheel building infrastructure
- Replace versioneer with setuptools_scm for automatic versioning from git tags
- Add GitHub Actions workflow for multi-platform wheel builds
- Configure cibuildwheel for Python 3.10, 3.11, 3.12 across Linux, macOS, Windows
- Add comprehensive release documentation and checklists
- Fix meson.build to support dynamic version generation
- Update .gitignore for build artifacts
- Add local wheel build script for testing

This enables automated PyPI releases with wheels for all major platforms.

--- a/meson.build
+++ b/meson.build
@@ -1,6 +1,8 @@
 project(
   'redblackgraph',
   'c', 'cpp', 'cython',
+  # Version is determined by setuptools_scm from git tags
+  # This is a fallback for meson's internal use
   version: '0.5.0',
   license: 'AGPL-3.0-or-later',
   meson_version: '>= 1.2.0',
@@ -16,6 +18,9 @@ project(
 py_mod = import('python')
 py = py_mod.find_installation(pure: false)
 py_dep = py.dependency()
+
+# Filesystem module for file checks
+fs = import('fs')
 
 message('Python path:', py.full_path())
 message('Python version:', py.language_version())
