Fix NumPy ufunc function pointer signatures for macOS compatibility
Use const npy_intp* for dimensions and steps parameters to match
PyUFuncGenericFunction signature on modern NumPy/macOS.

This fixes 'incompatible function pointer types' errors on macOS builds.

--- a/redblackgraph/core/src/redblackgraph/relational_composition.c.in
+++ b/redblackgraph/core/src/redblackgraph/relational_composition.c.in
@@ -267,7 +267,7 @@ static void
 }
 
 static void
-{{name}}_gufunc_vertex_relational_composition(char **args, npy_intp *dimensions, npy_intp *steps, void *NPY_UNUSED(func))
+{{name}}_gufunc_vertex_relational_composition(char **args, const npy_intp *dimensions, const npy_intp *steps, void *NPY_UNUSED(func))
 {
     /* outer dimensions counter */
     npy_intp N_;
