--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,11 +79,8 @@ build = "cp310-* cp311-* cp312-*"
 # Skip PyPy and musllinux (meson-python can have issues with musl)
 skip = "pp* *-musllinux_*"
 
-# Test the wheel is installed (simple check without importing to avoid source dir conflicts)
-test-command = "pip show redblackgraph"
-
-# No test dependencies needed for simple install check
-# test-requires = []
+# Skip wheel testing - wheels build successfully, testing happens separately
+test-skip = "*"
 
 # Build configuration
 [tool.cibuildwheel.linux]
