--- a/meson.build
+++ b/meson.build
@@ -1,24 +1,9 @@
-# Get version dynamically from setuptools_scm
-# Meson runs from project root, so "." should find .git directory
-version_result = run_command(
-  'python3', '-c',
-  'from setuptools_scm import get_version; print(get_version(root="."), end="")',
-  check: false,
-  capture: true,
-)
-
-# Use setuptools_scm version if available, otherwise fallback
-if version_result.returncode() == 0 and version_result.stdout().strip() != ''
-  _version = version_result.stdout().strip()
-else
-  _version = '0.0.0.dev0'
-  warning('Could not determine version from setuptools_scm, using fallback: ' + _version)
-endif
-
 project(
   'redblackgraph',
   'c', 'cpp', 'cython',
-  version: _version,
+  # This version is only used by meson internally and for local builds
+  # Actual wheel version is determined by setuptools_scm from git tags via meson-python
+  version: '0.5.1',
   license: 'AGPL-3.0-or-later',
   meson_version: '>= 1.2.0',
   default_options: [
