Update PyPI environment name from 'release' to 'pypi'
Matches the trusted publisher configuration on PyPI.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -117,7 +117,7 @@ jobs:
     name: Publish to PyPI
     needs: [create-release]
     runs-on: ubuntu-latest
-    environment: release
+    environment: pypi
     permissions:
       id-token: write
     
