--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Fetch all history for setuptools_scm to detect version from tags
       
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -45,43 +47,28 @@ jobs:
           path: dist/*.tar.gz
 
   build-wheels:
-    name: Build Wheels (${{ matrix.os }}, Python ${{ matrix.python-version }})
+    name: Build wheels on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ['3.10', '3.11', '3.12']
+        os: [ubuntu-latest, windows-latest, macos-13, macos-14]  # macos-13 is x86_64, macos-14 is arm64
     
     steps:
       - uses: actions/checkout@v4
-      
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version }}
+          fetch-depth: 0  # Fetch all history for setuptools_scm to detect version from tags
       
-      - name: Generate __config__.py
-        run: python generate_config.py
+      - name: Build wheels
+        uses: pypa/cibuildwheel@v2.16.5
+        env:
+          CIBW_BUILD_VERBOSITY: 1
       
-      - name: Install build dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install build
-          pip install meson-python>=0.15.0
-          pip install meson>=1.2.0
-          pip install ninja
-          pip install cython>=3.0
-          pip install tempita>=0.5.2  # Required for template processing
-      
-      - name: Build wheel
-        run: python -m build --wheel
-      
-      - name: Upload wheel artifact
+      - name: Upload wheel artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: wheels-${{ matrix.os }}-py${{ matrix.python-version }}
-          path: dist/*.whl
+          name: cibw-wheels-${{ matrix.os }}-${{ strategy.job-index }}
+          path: ./wheelhouse/*.whl
 
   create-release:
     name: Create GitHub Release
@@ -96,12 +83,23 @@ jobs:
       - name: Download all artifacts
         uses: actions/download-artifact@v4
         with:
+          pattern: cibw-*
+          path: dist/
+          merge-multiple: true
+      
+      - name: Download sdist
+        uses: actions/download-artifact@v4
+        with:
+          name: sdist
           path: dist/
       
-      - name: Flatten artifacts directory
+      - name: List all files
+        run: ls -lh dist/
+      
+      - name: Prepare release files
         run: |
           mkdir -p release_files
-          find dist/ -type f \( -name "*.whl" -o -name "*.tar.gz" \) -exec mv {} release_files/ \;
+          cp dist/*.whl dist/*.tar.gz release_files/ 2>/dev/null || true
       
       - name: Create Release
         uses: softprops/action-gh-release@v1
@@ -122,17 +120,23 @@ jobs:
       id-token: write
     
     steps:
-      - name: Download all artifacts
+      - name: Download wheel artifacts
         uses: actions/download-artifact@v4
         with:
+          pattern: cibw-*
+          path: dist/
+          merge-multiple: true
+      
+      - name: Download sdist
+        uses: actions/download-artifact@v4
+        with:
+          name: sdist
           path: dist/
       
-      - name: Flatten artifacts directory
-        run: |
-          mkdir -p pypi_upload
-          find dist/ -type f \( -name "*.whl" -o -name "*.tar.gz" \) -exec mv {} pypi_upload/ \;
+      - name: List all files
+        run: ls -lh dist/
       
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          packages-dir: pypi_upload/
+          packages-dir: dist/
