--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,6 +79,9 @@ build = "cp310-* cp311-* cp312-*"
 # Skip PyPy and musllinux (meson-python can have issues with musl)
 skip = "pp* *-musllinux_*"
 
+# Generate __config__.py before building
+before-build = "python {project}/generate_config.py"
+
 # Test that the wheel can be imported successfully
 test-command = "python -c \"import redblackgraph; print('✓ Import successful, version:', redblackgraph.__version__)\""
 
