Skip 32-bit builds (win32 and manylinux_i686)
32-bit Python usage is minimal and the builds were failing.
Focus on 64-bit platforms which cover 99%+ of users:
- Windows: win_amd64 only
- Linux: manylinux_x86_64 only
- macOS: x86_64 and arm64 (both 64-bit)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,8 +76,8 @@ rbg = "redblackgraph.__main__:main"
 # Build wheels for CPython 3.10, 3.11, 3.12 on all platforms
 build = "cp310-* cp311-* cp312-*"
 
-# Skip PyPy and musllinux (meson-python can have issues with musl)
-skip = "pp* *-musllinux_*"
+# Skip PyPy, musllinux, and 32-bit builds
+skip = "pp* *-musllinux_* *-win32 *-manylinux_i686"
 
 # Generate __config__.py before building
 before-build = "python {project}/generate_config.py"
