--- a/pyproject.toml
+++ b/pyproject.toml
@@ -80,7 +80,8 @@ build = "cp310-* cp311-* cp312-*"
 skip = "pp* *-musllinux_* *-win32 *-manylinux_i686"
 
 # Generate __config__.py before building
-before-build = "python {project}/generate_config.py"
+# Use explicit path to ensure it runs from project root
+before-build = "python generate_config.py"
 
 # Test that the wheel can be imported successfully
 test-command = "python -c \"import redblackgraph; print('✓ Import successful, version:', redblackgraph.__version__)\""
