Configure Windows builds to use MSVC instead of MinGW
Set CC and CXX environment variables to explicitly use cl.exe (MSVC)
instead of allowing meson to find MinGW's gcc. This fixes DLL load
errors on Windows caused by MinGW-compiled extensions.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -109,8 +109,10 @@ before-all = [
 
 [tool.cibuildwheel.windows]
 # Windows-specific configuration
+# Ensure MSVC is used instead of MinGW for proper DLL compatibility
+environment = { CC="cl.exe", CXX="cl.exe" }
 before-build = [
-    "pip install ninja"
+    "pip install ninja",
 ]
 
 [tool.setuptools_scm]
