Fix Windows builds to use MSVC instead of MinGW
Changes:
1. Added msvc-dev-cmd action to workflow to set up MSVC environment
2. Configured delvewheel for Windows to bundle DLLs properly
3. Added generate_config.py to Windows before-build

This ensures MSVC is found before MinGW and prevents DLL load errors.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,6 +59,10 @@ jobs:
         with:
           fetch-depth: 0  # Fetch all history for setuptools_scm to detect version from tags
       
+      - name: Set up MSVC (Windows only)
+        if: runner.os == 'Windows'
+        uses: ilammy/msvc-dev-cmd@v1
+      
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.16.5
         env:
