Fix YAML syntax error in build-wheels.yml
Collapsed multi-line expression in environment.url to single line.
YAML does not allow line breaks inside expression syntax without
proper continuation.

--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -82,11 +82,7 @@ jobs:
       
     environment:
       name: ${{ github.event_name == 'workflow_dispatch' && inputs.publish_to || 'pypi' }}
-      url: ${{ 
-        github.event_name == 'workflow_dispatch' && inputs.publish_to == 'testpypi' 
-        && 'https://test.pypi.org/p/redblackgraph' 
-        || 'https://pypi.org/p/redblackgraph' 
-      }}
+      url: ${{ github.event_name == 'workflow_dispatch' && inputs.publish_to == 'testpypi' && 'https://test.pypi.org/p/redblackgraph' || 'https://pypi.org/p/redblackgraph' }}
 
     steps:
       - uses: actions/download-artifact@v4
