Make fs-crawler an optional dependency
BREAKING CHANGE: fs-crawler and XlsxWriter are now optional dependencies.

Changes:
- Moved fs-crawler and XlsxWriter from dependencies to optional-dependencies[io]
- Made imports conditional in __init__.py - package works without file I/O utils
- Added io dependencies to test extras (tests still need them)
- Core functionality (sparse matrices, AVOS operations) works without fs-crawler

Users who need file I/O utilities (RelationshipFileReader, RedBlackGraphWriter,
RbgGraphBuilder) should install with:
  pip install redblackgraph[io]

This reduces default dependencies and installation size for users who only
need the core graph algorithms.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,11 +46,14 @@ classifiers = [
 dependencies = [
     "numpy>=1.26.0,<2.0",
     "scipy>=1.11.0",
-    "XlsxWriter",
-    "fs-crawler>=0.3.2",
 ]
 
 [project.optional-dependencies]
+# File I/O utilities (CSV/Excel graph readers/writers)
+io = [
+    "fs-crawler>=0.3.2",
+    "XlsxWriter",
+]
 dev = [
     "wheel>=0.29",
 ]
@@ -58,6 +61,8 @@ test = [
     "pytest>=3.0",
     "pytest-cov>=2.4",
     "pylint>=1.8.1",
+    "fs-crawler>=0.3.2",  # Tests use RelationshipFileReader
+    "XlsxWriter",  # Tests use RedBlackGraphWriter
 ]
 
 [project.urls]
