--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -10,12 +10,13 @@ on:
 
 jobs:
   integration-test:
-    name: Integration Test (Python ${{ matrix.python-version }})
+    name: Integration Test (Python ${{ matrix.python-version }}, NumPy ${{ matrix.numpy-version }})
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
         python-version: ['3.10', '3.11', '3.12']
+        numpy-version: ['1.26', '2.1']
     
     steps:
       - uses: actions/checkout@v4
@@ -36,7 +37,7 @@ jobs:
       - name: Install build dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install "numpy>=1.26.0,<2.0"
+          pip install "numpy~=${{ matrix.numpy-version }}.0"
           pip install meson-python>=0.15.0
           pip install meson>=1.2.0
           pip install ninja
