fix: Vendor npy_2_compat.h for NumPy 1.x compatibility
- Add numpy/npy_2_compat.h from NumPy 2.0 to redblackgraph/core/include/
- Update meson.build to include vendored header directory
- Required for building with NumPy 1.26.x (header doesn't exist in 1.x)

Per NumPy 2.0 migration guide:
- npy_2_compat.h is designed to be vendored by downstream projects
- Provides compatibility layer for dual 1.x/2.x support
- Must be available when compiling with NumPy 1.x

This allows the project to build with both NumPy 1.26+ and 2.x

--- a/redblackgraph/core/meson.build
+++ b/redblackgraph/core/meson.build
@@ -66,6 +66,7 @@ _redblackgraph_sources = [
 _redblackgraph_inc = [
   include_directories(src_dir),
   include_directories('.'),  # For generated rbg_math.h
+  include_directories('include'),  # For vendored npy_2_compat.h (NumPy 1.x compatibility)
 ]
 
 # Build the extension
