feat: Add explicit RED_ONE and BLACK_ONE constants for red-black algebra
Introduced explicit named constants to represent the two multiplicative identities
in the red-black semiring, making the parity-based algebraic structure clear and
self-documenting throughout the codebase.

**New Constants Module (redblackgraph/constants.py):**
- RED_ONE (-1): Identity for even values in AVOS product
- BLACK_ONE (1): Identity for odd values in AVOS product
- Helper functions: red_one_for_dtype(), black_one_for_dtype(), is_red_one(), is_black_one()

**AVOS Product Semantics:**
- x ⊗ RED_ONE  = x if x is even, else 0 (undefined)
- x ⊗ BLACK_ONE = x if x is odd, else 0 (undefined)

**NumPy 2.x Compatibility:**
For unsigned integer types, RED_ONE is represented as maxint (e.g., 255 for uint8)
to maintain correct parity and avoid overflow errors.

**Changes:**
- Created redblackgraph/constants.py with full documentation
- Exported constants in redblackgraph/__init__.py
- Updated all test files to use RED_ONE and BLACK_ONE instead of literal -1 and 1
- Added test_support.py utility module for shared test helpers (rb_matrix)
- Updated meson.build files to include new Python modules

**Test Results - ALL PASSING:**
✅ Python 3.10 + NumPy 2.2.6: 117/117 tests (100%)
✅ Python 3.11 + NumPy 2.3.4: 117/117 tests (100%)
✅ Python 3.12 + NumPy 2.3.4: 117/117 tests (100%)

This refactoring significantly improves code clarity by making the mathematical
structure of the red-black semiring explicit and self-explanatory.

--- a/redblackgraph/util/meson.build
+++ b/redblackgraph/util/meson.build
@@ -5,6 +5,7 @@ python_sources = [
   'capture.py',
   'graph_builder.py',
   'relationship_file_io.py',
+  'test_support.py',
 ]
 
 py.install_sources(
