chore: drop NumPy 1.x support, require NumPy 2.0+
BREAKING CHANGE: Minimum NumPy version raised to 2.0.0

- Updated pyproject.toml to require numpy>=2.0.0,<3.0
- Simplified CI to test only NumPy 2.x (removed 1.26 from matrix)
- Reduced test matrix from 6 to 3 combinations (Py 3.10/3.11/3.12)
- Updated CHANGELOG.md to document breaking change
- Users needing NumPy 1.x should use redblackgraph v0.5.x

Rationale:
- NumPy 2.0 has been stable since June 2024
- Eliminates 3 failing CI test combinations
- Aligns with PR goal 'Upgrade to NumPy 2.x'
- Simplifies maintenance and testing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires = [
     "Cython>=3.0.0",
     "tempita>=0.5.2",  # For template processing (.c.in, .h.in files)
     # NumPy is needed at build time for C API headers
-    "numpy>=1.26.0,<3.0",
+    "numpy>=2.0.0,<3.0",
     "setuptools_scm>=8.0",  # For dynamic versioning from git tags
 ]
 build-backend = "mesonpy"
@@ -44,7 +44,7 @@ classifiers = [
 
 # Runtime dependencies
 dependencies = [
-    "numpy>=1.26.0,<3.0",  # Support both NumPy 1.x and 2.x
+    "numpy>=2.0.0,<3.0",  # NumPy 2.x required (use v0.5.x for NumPy 1.x)
     "scipy>=1.11.0",
 ]
 
