--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install "numpy>=1.26.0,<3.0"
+          pip install "numpy>=2.0.0,<3.0"
           pip install meson-python>=0.15.0
           pip install meson>=1.2.0
           pip install ninja
@@ -45,13 +45,12 @@ jobs:
           pylint redblackgraph --rcfile=.pylintrc -d C,R | tee _testing_output/pylint_output.txt
 
   test:
-    name: Test (Python ${{ matrix.python-version }}, NumPy ${{ matrix.numpy-version }})
+    name: Test (Python ${{ matrix.python-version }})
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
         python-version: ['3.10', '3.11', '3.12']
-        numpy-version: ['1.26', '2.1']
     
     steps:
       - uses: actions/checkout@v4
@@ -72,7 +71,7 @@ jobs:
       - name: Install build dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install "numpy~=${{ matrix.numpy-version }}.0"
+          pip install "numpy>=2.0.0,<3.0"
           pip install meson-python>=0.15.0
           pip install meson>=1.2.0
           pip install ninja
