fix: replace VLAs with dynamic allocation for MSVC compatibility
MSVC doesn't support C99 Variable Length Arrays, even with compile-time
constant sizes like NPY_MAXARGS (64) and NPY_MAXDIMS (64).

Changed to use malloc/free for dynamic allocation instead of VLAs:

Files fixed:
- redblack.c.src: Replaced 7 VLA declarations with dynamic allocation
  - op_labels, op, op_dtypes_array, op_axes_arrays, op_axes, op_flags, fixed_strides
  - Added cleanup_arrays label for proper memory management
- redblackgraphmodule.c: Replaced 1 VLA (op array) with dynamic allocation
  - Added free(op) at finish label

Also updated global C++ standard to c++14 for better MSVC compatibility:
- meson.build: Changed cpp_std from c++11 to c++14
- redblackgraph/sparse/meson.build: Removed redundant compiler-specific flags

Fixes Windows compilation errors:
- error C2057: expected constant expression
- error C2133: unknown size

This is the final fix needed for v0.6.0 Windows builds.

--- a/meson.build
+++ b/meson.build
@@ -9,7 +9,7 @@ project(
   default_options: [
     'buildtype=debugoptimized',
     'c_std=c99',
-    'cpp_std=c++11',
+    'cpp_std=c++14',  # c++14 is supported by MSVC, GCC, and Clang
     'warning_level=2',
   ],
 )
