fix: ensure git tags are fetched for setuptools_scm version detection
GitHub Actions checkout doesn't always include the triggering tag
when workflows are triggered by tag pushes. Added explicit
'git fetch --force --tags' after checkout to ensure setuptools_scm
can detect the correct version.

Without this, builds were generating version 0.5.1 instead of 0.6.0,
causing PyPI upload failures due to duplicate filenames.

Fixes version detection for v0.6.0 release.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,9 @@ jobs:
         with:
           fetch-depth: 0  # Fetch all history for setuptools_scm to detect version from tags
       
+      - name: Fetch tags
+        run: git fetch --force --tags
+      
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
@@ -55,6 +58,9 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Fetch all history for setuptools_scm to detect version from tags
+      
+      - name: Fetch tags
+        run: git fetch --force --tags
       
       - name: Set up MSVC (Windows only)
         if: runner.os == 'Windows'
