--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
+          ref: ${{ github.ref }}  # Explicitly checkout the tag ref, not just the commit
           fetch-depth: 0  # Fetch all history for setuptools_scm to detect version from tags
       
       - name: Fetch tags
@@ -57,6 +58,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
+          ref: ${{ github.ref }}  # Explicitly checkout the tag ref, not just the commit
           fetch-depth: 0  # Fetch all history for setuptools_scm to detect version from tags
       
       - name: Fetch tags
