--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -72,6 +72,7 @@ jobs:
         uses: pypa/cibuildwheel@v2.16.5
         env:
           CIBW_BUILD_VERBOSITY: 1
+          SETUPTOOLS_SCM_PRETEND_VERSION: ${{ github.ref_name }}
       
       - name: Upload wheel artifacts
         uses: actions/upload-artifact@v4
