--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,6 +84,9 @@ build = "cp310-* cp311-* cp312-*"
 # Skip PyPy, musllinux, and 32-bit builds
 skip = "pp* *-musllinux_* *-win32 *-manylinux_i686"
 
+# Force version for setuptools_scm - bypasses git detection entirely
+environment = { SETUPTOOLS_SCM_PRETEND_VERSION = "0.6.0" }
+
 # Test that the wheel can be imported successfully
 test-command = "python -c \"import redblackgraph; print('✓ Import successful, version:', redblackgraph.__version__)\""
 
