refactor: implement proper dynamic versioning with setuptools_scm
Removed all temporary workarounds and implemented clean setuptools_scm
integration with meson-python for automatic version detection from git tags.

Changes:
1. meson.build: Removed hardcoded version - meson-python now uses setuptools_scm
2. pyproject.toml:
   - Added [toml] extra to setuptools_scm for better integration
   - Removed temporary SETUPTOOLS_SCM_PRETEND_VERSION from cibuildwheel
   - Removed write_to (not needed with meson-python)
3. release.yml: Removed redundant git fetch steps (checkout with fetch-depth: 0 is sufficient)

How it works:
- When meson.build has no version, meson-python automatically uses setuptools_scm
- setuptools_scm reads version from git tags (configured in [tool.setuptools_scm])
- Version scheme: post-release (exact tag = version, commits after = version.postN)
- Local scheme: no-local-version (no +gHASH suffix)

Future releases will automatically version from git tags without manual updates.

--- a/meson.build
+++ b/meson.build
@@ -1,9 +1,8 @@
 project(
   'redblackgraph',
   'c', 'cpp', 'cython',
-  # This version is only used by meson internally and for local builds
-  # Actual wheel version is determined by setuptools_scm from git tags via meson-python
-  version: '0.6.0',
+  # Version is determined dynamically by setuptools_scm from git tags via meson-python
+  # No version specified here - meson-python will use setuptools_scm automatically
   license: 'AGPL-3.0-or-later',
   meson_version: '>= 1.2.0',
   default_options: [
