fix: add fallback version to meson.build for meson-python
meson-python requires a version parameter in meson.build even when using
setuptools_scm. The version '0.0.0' serves as a fallback only used if
setuptools_scm fails (e.g., building from source tarball without git).

During normal builds:
- meson-python invokes setuptools_scm (configured in pyproject.toml)
- setuptools_scm detects version from git tags
- meson-python uses that version, ignoring the fallback

The fallback prevents build failures in edge cases while maintaining
dynamic versioning for all normal use cases.

--- a/meson.build
+++ b/meson.build
@@ -1,8 +1,9 @@
 project(
   'redblackgraph',
   'c', 'cpp', 'cython',
-  # Version is determined dynamically by setuptools_scm from git tags via meson-python
-  # No version specified here - meson-python will use setuptools_scm automatically
+  # Version: meson-python uses setuptools_scm from pyproject.toml to determine version
+  # This default is used only if setuptools_scm fails (e.g., building from tarball without git)
+  version: '0.0.0',  # Fallback - actual version from setuptools_scm
   license: 'AGPL-3.0-or-later',
   meson_version: '>= 1.2.0',
   default_options: [
