feat: dynamic versioning from git tags in meson.build
Use run_command directly in the version parameter:
version: run_command('git', 'describe', '--tags', '--abbrev=0', check: false).stdout().strip().substring(1)

This:
- Gets the latest tag (e.g., v0.6.0)
- Strips whitespace
- Removes 'v' prefix with substring(1) (v0.6.0 -> 0.6.0)
- Uses check: false so build continues if git unavailable

Much simpler than variable assignment approach.
Future releases will automatically use the correct version from tags.

--- a/meson.build
+++ b/meson.build
@@ -1,9 +1,8 @@
 project(
   'redblackgraph',
   'c', 'cpp', 'cython',
-  # Version is hardcoded for now - will be updated manually for releases
-  # TODO: Investigate proper dynamic versioning with meson-python
-  version: '0.6.0',
+  # Get version from git tag dynamically
+  version: run_command('git', 'describe', '--tags', '--abbrev=0', check: false).stdout().strip().substring(1),
   license: 'AGPL-3.0-or-later',
   meson_version: '>= 1.2.0',
   default_options: [
