fix: proper conditional logic for git version detection
Use if/else instead of ternary operator (not supported in meson).
Check:
1. Git command succeeded (returncode == 0)
2. Output is not empty
3. Output starts with 'v'

If all conditions met, strip 'v' prefix. Otherwise fallback to '0.6.0'.

This ensures builds work even when git is unavailable or returns unexpected output.

--- a/meson.build
+++ b/meson.build
@@ -1,8 +1,18 @@
+# Get version from git, with fallback
+_git_result = run_command('git', 'describe', '--tags', '--abbrev=0', check: false)
+_git_version = _git_result.stdout().strip()
+
+# Default to 0.6.0, but use git version if available and starts with 'v'
+if _git_result.returncode() == 0 and _git_version != '' and _git_version.startswith('v')
+  _version = _git_version.substring(1)
+else
+  _version = '0.6.0'
+endif
+
 project(
   'redblackgraph',
   'c', 'cpp', 'cython',
-  # Get version from git tag dynamically
-  version: run_command('git', 'describe', '--tags', '--abbrev=0', check: false).stdout().strip().substring(1),
+  version: _version,
   license: 'AGPL-3.0-or-later',
   meson_version: '>= 1.2.0',
   default_options: [
