--- a/meson.build
+++ b/meson.build
@@ -1,18 +1,9 @@
-# Get version from git, with fallback
-_git_result = run_command('git', 'describe', '--tags', '--abbrev=0', check: false)
-_git_version = _git_result.stdout().strip()
-
-# Default to 0.6.0, but use git version if available and starts with 'v'
-if _git_result.returncode() == 0 and _git_version != '' and _git_version.startswith('v')
-  _version = _git_version.substring(1)
-else
-  _version = '0.6.0'
-endif
-
 project(
   'redblackgraph',
   'c', 'cpp', 'cython',
-  version: _version,
+  # Version: meson-python doesn't yet support setuptools_scm (see issue #159)
+  # For now, version must be manually updated here for each release
+  version: '0.6.0',
   license: 'AGPL-3.0-or-later',
   meson_version: '>= 1.2.0',
   default_options: [
