chore: bump version to 0.6.1-dev for development
After tagging v0.6.0, update master branch to 0.6.1-dev.

This ensures:
- Builds from master are clearly development builds
- v0.6.0 tag still points to 0.6.0 release version
- Future releases: remove -dev suffix, commit, tag, then bump again

Version workflow for next release (0.6.1):
1. Update version to '0.6.1' in meson.build and pyproject.toml
2. Commit: git commit -m 'chore: bump version to 0.6.1'
3. Tag: git tag -a v0.6.1 -m 'Release v0.6.1'
4. Push: git push origin master v0.6.1
5. Bump to '0.6.2-dev' on master

--- a/meson.build
+++ b/meson.build
@@ -3,7 +3,7 @@ project(
   'c', 'cpp', 'cython',
   # Version: meson-python doesn't yet support setuptools_scm (see issue #159)
   # For now, version must be manually updated here for each release
-  version: '0.6.0',
+  version: '0.6.1-dev',
   license: 'AGPL-3.0-or-later',
   meson_version: '>= 1.2.0',
   default_options: [
